<resources>
    <string name="app_name">Musicfun</string>
    <string name="search_hint">Search</string>
    <string name="title_home">Discovery</string>
    <string name="title_dashboard">My Music</string>
    <string name="title_notifications">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_skip"><u>I don\'t need an account.</u></string>
    <string name="action_direct_login"><u>Already have an account?</u></string>
    <string name="action_logout">Logout</string>
    <string name="invalid_username">Username can not be empty</string>
    <string name="invalid_login">Wrong username or password</string>
    <string name="duplicate_username">This username already exists!</string>
    <string name="wrong_password">Your current password is wrong.</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="reset_pw">Reset password</string>
    <string name="pw_saved">New password saved!</string>
    <string name="change_genre">Change genres</string>
    <string name="listen_history">Listen history</string>
    <string name="login_required">You need to login/register first!</string>
    <string name="submit_genre">Let\'s get started!</string>
    <string name="save">Save</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="welcome">Welcome</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="X_playlist_is_deleted">is deleted</string>
    <string name="at_least_one_playlist">You need to have at least one playlist!</string>
    <string name="at_least_one_default">You need to have a default playlist!</string>
    <string name="X_is_shared"> is shared</string>

    <string name="genre_country">Country</string>
    <string name="genre_electronic">Electronic</string>
    <string name="genre_hiphop">Hiphop</string>
    <string name="genre_jazz">Jazz</string>
    <string name="genre_pop">Pop</string>
    <string name="genre_rock">Rock</string>
    <string name="genre_classic">Classic</string>

    <string name="remove">Remove</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="add_playlist">Create a new playlist</string>
    <string name="give_new_name">Give a new name to your playlist:</string>
    <string name="need_name">Please give your playlist a name!</string>
    <string name="set_as_default">Set playlist as default</string>
    <string name="unpin">Unpin</string>
    <string name="share">Share</string>
    <string name="playlist_name">Your playlist name</string>
    <string name="new_playlist">New playlist</string>
    <string name="already_in_playlist">This song is already added to this playlist</string>
    <string name="added_to">Added to </string>
    <string name="playlist_need_name">Please give your playlist a name!</string>
    <string name="create">Create</string>
    <string name="add_to_playlist">Add to a playlist</string>
    <string name="delete_playlist">Delete?</string>
    <string name="delete_friend">Delete friend?</string>
    <string name="sure_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="sure_delete_song">Are you sure you want to delete this song?</string>
    <string name="sure_delete_friend">Are you sure you want to delete this friend?</string>
    <string name="empty_playlist">Your playlist is still empty</string>
    <string name="new_releases">New Releases</string>
    <string name="friends_popular">Friends\' Taste</string>
    <string name="musicfun_charts">Our Chart</string>
    <string name="you_might_like">You May Like</string>
    <string name="genre_selection_title">What kind of music do you like?</string>
    <string name="setting">Settings</string>

    <string name="search_hint_songs">Find a song</string>
    <string name="search_hint_playlist">Search playlists</string>
    <string name="search_hint_song_in_playlist">Search in playlist</string>
    <string name="search_hint_friend">Find a friend</string>
    <string name="invite_friends">Invite friends</string>
    <string name="listen_together">Listen together</string>
    <string name="participants">Participants</string>
    <string name="current_title">Current title</string>
    <string name="coming_next">Coming next</string>
    <string name="add_to_default">Add to default playlist</string>
    <string name="no_songs">There are currently no songs in this playlist!</string>
    <string name="bad_words">Message censored - Bad word used</string>

    <string name="owner_right_rename">Sorry, only the owner can rename it</string>
    <string name="owner_right_delete">Sorry, only the owner can delete it</string>
    <string name="switch_language">Switch language</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="active_users">Active users</string>
    <string name="request_from">Request from:</string>
    <string name="request_pending">Request pending...</string>
    <string name="shared_playlists">Shared Playlists</string>
    <string name="friends">Friends</string>
    <string name="no_lyrics">You\'ll have to guess the lyrics for this one.</string>
    <string name="sure_leave_room">Are you sure to leave the room?</string>
    <string name="need_playlist">Please choose a playlist!</string>
    <string name="no_account"><u>No account?</u></string>
    <string name="invitees">Invitees</string>
    <string name="choose_playlist">Choose Playlist</string>


</resources>